# Vacancy_Database_Saver

./: README.md  main.py  pyproject.toml
data/: comps.json  dicts.json
src/: companies_fetcher.py  db_manager.py  logger.py  vacancies_fetcher.py
