[tool.poetry]
name = "vacancy-database-saver"
version = "0.1.0"
description = ""
authors = ["Roman.Iastremskyi <iastremskyi010397@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"

[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[tool.isort]
line_length = 119


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
requests = "^2.32.3"
psycopg2 = "^2.9.10"
types-requests = "^2.32.0.20241016"
types-psycopg2 = "^2.9.21.20241019"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
